Update solar detection .ipynb

--- a/solar detection .ipynb
+++ b/solar detection .ipynb
@@ -69,7 +69,7 @@
         "from roboflow import Roboflow\n",
         "\n",
         "rf = Roboflow(api_key=\"aImUMFk7EkUzyTAImw59\")\n",
-        "project = rf.workspace(\"stupid-stan-as-sonia-team-manager\").project(\"panel-detection-evbvh\")\n",
+        "project = rf.workspace(\"DETECTION\").project(\"panel-detection-evbvh\")\n",
         "version = project.version(1)\n",
         "dataset = version.download(\"yolov11\")\n"
       ],
